# js-polars-old

./: .gitignore  Cargo.toml  Makefile  README.md  app.js  app.ts  build.sh  example.csv  index.html  index.js  package.json  rome.json  tsconfig.json  webpack.config.js  worker.js
examples/: 1k.json  1k.parquet
polars/: dataframe.ts  index.ts  utils.ts  worker.ts
polars/lazy/: index.ts
polars/series/: constructor.ts  index.ts
src/: dataframe.rs  lib.rs  pool.rs  series.rs  utils.rs
src/conversion/: from.rs  mod.rs
src/lazy/: dataframe.rs  dsl.rs  mod.rs
src/lazy/expr/: conversion.rs  mod.rs
