[package]
name = "polars"
version = "0.0.1"
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
repository = "https://github.com/pola-rs/polars"
wasm-opt = false
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
ahash = "0.7"

serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.79"}
js-sys = "0.3.56"
thiserror = "1.0.20"
paste = "1.0.6"


[dependencies.polars]
features = [
  "abs",
  "arange",
  # "cum_agg",
  # "diagonal_concat",
  "diff",
  "dot_diagram",
  "dot_product",
  "dtype-categorical",
  "dtype-full",
  "extract_jsonpath",
  # "horizontal_concat",
  "interpolate",
  "is_first",
  "list",
  "log",
  "mode",
  "moment",
  "object",
  "pct_change",
  "performant",
  "private",
  "product",
  "rank",
  "reinterpret",
  # "rolling_window",
  "round_series",
  "row_hash",
  # "rows",
  "temporal",
  "string_encoding",
  "strings",
  "true_div",
  "unique_counts",
]
default-features = false
git = "https://github.com/pola-rs/polars"
rev = "12d8c73a13f6e119abfb5bd1f953dbfb2c4748da"

[dependencies.web-sys]
version = "0.3.56"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"


[workspace]
