[package]
authors = ["Cory Grinstead"]
documentation = "https://pola-rs.github.io/polars-book/"
edition = "2021"
homepage = "https://github.com/pola-rs/polars"
license = "MIT"
name = "js-polars"
repository = "https://github.com/pola-rs/polars"
version = "0.0.1"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'

[features]

[dependencies]
ahash = "0.7"
console_error_panic_hook = "0.1.7"
futures-channel = "0.3"
js-sys = "0.3"
paste = "1.0.6"
rayon = "1.5"
spmc = "0.3.0"
thiserror = "1.0.20"
wasm-bindgen = {version = "0.2"}
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = {version = "1.0", features = ["no-bundler"]}

serde-wasm-bindgen = "0.4"

[dependencies.polars]
default-features = false
features = [
  "abs", # "diagonal_concat",
  "diff", # "dot_diagram",  # "dtype-categorical",
  "dtype-full",
  "round_series",
  "is_first",
  "lazy", # "extract_jsonpath",
  # "horizontal_concat",
  "mode", # "object",
  # "performant",
  # "json",
  "csv-file", # "private",
  # "fmt",
  "product",
  "rank",
  "reinterpret", # "rolling_window",
  "rows", # "temporal",
  "strings",
  "string_encoding",
  "unique_counts", # "browser-parquet"
]
git = "https://github.com/gitkwr/polars.git"

[dependencies.web-sys]
features = [
  'console', # 'CanvasRenderingContext2d',
  'ErrorEvent', # 'Event',  # 'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerGlobalScope',
  'WorkerType',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
version = "0.3.56"

[workspace]
